name:                antiqua-prime
version:             0.0.1.16
description:         ascii game library
homepage:            dogue.in
license:             MIT
license-file:        LICENSE
author:              olive
maintainer:          olivine.dogue@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Antiqua.Game
                     , Antiqua.Common
                     , Antiqua.Data.Coordinate
                     , Antiqua.Data.CP437
                     , Antiqua.Data.Array2d
                     , Antiqua.Data.Graph
                     , Antiqua.Data.Flood
                     , Antiqua.Data.NonEmpty
                     , Antiqua.Geometry.Circle
                     , Antiqua.Geometry.Line
                     , Antiqua.Graphics.Animation
                     , Antiqua.Graphics.Assets
                     , Antiqua.Graphics.Colors
                     , Antiqua.Graphics.Color
                     , Antiqua.Graphics.Rect
                     , Antiqua.Graphics.Renderer
                     , Antiqua.Graphics.Tile
                     , Antiqua.Graphics.TileRenderer
                     , Antiqua.Graphics.Utils
                     , Antiqua.Graphics.Window
                     , Antiqua.Input.Controls
                     , Antiqua.Loading.TMXLoader
                     , Antiqua.Pathing.Dijkstra
                     , Antiqua.Sound.Audio
                     , Antiqua.Utils
  build-depends:       base >=4.7 && <4.8
                     , GLFW-b
                     , OpenGLRaw
                     , GLURaw
                     , bytestring
                     , JuicyPixels
                     , OpenGL
                     , vector
                     , containers
                     , async
                     , PSQueue
                     , MonadRandom
                     , random
                     , OpenAL
                     , ALUT
                     , transformers
                     , QuickCheck
                     , deepseq
                     , xml
                     , text
                     , array
  default-extensions:  GADTs
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , NoMonomorphismRestriction
                     , RankNTypes
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , BangPatterns
                     , NullaryTypeClasses
                     , ViewPatterns
                     , TupleSections
  ghc-options:         -fno-warn-orphans
  default-language:    Haskell2010
Test-Suite tests
  hs-source-dirs:      src
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
  build-depends:       base >=4.7 && <4.8
                     , GLFW-b
                     , OpenGLRaw
                     , GLURaw
                     , bytestring
                     , JuicyPixels
                     , OpenGL
                     , vector
                     , containers
                     , async
                     , PSQueue
                     , MonadRandom
                     , random
                     , OpenAL
                     , ALUT
                     , transformers
                     , QuickCheck
                     , deepseq
                     , xml
                     , text
                     , antiqua-prime

